// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button mouseover should make image effect with given props 1`] = `
<button
  className="Button"
  style={
    Object {
      "backgroundImage": "url(buttonBackground.svg)",
    }
  }
>
  <div
    className="ButtonEffect"
  >
    <div
      className="ButtonInner"
    >
      <div>
        View More
      </div>
    </div>
  </div>
</button>
`;

exports[`Button should render correctly with no props 1`] = `
<button
  className="Button"
  style={
    Object {
      "backgroundImage": "url(undefined)",
    }
  }
>
  <div
    className="ButtonEffect"
  >
    <div
      className="ButtonInner"
    >
      <div>
        View More
      </div>
    </div>
  </div>
</button>
`;
